plugins {
    id 'java'
    id 'org.springframework.boot' version '3.4.1'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.example'
version = '0.0.1'

bootJar {
    archiveBaseName = 'main'
    archiveVersion = ''
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-aop'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
    implementation 'org.springframework.boot:spring-boot-starter-mail'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'

    runtimeOnly 'org.postgresql:postgresql'
    implementation 'io.lettuce:lettuce-core:6.7.1.RELEASE'
    implementation 'com.google.firebase:firebase-admin:9.4.3'
    implementation 'software.amazon.awssdk:s3:2.31.11'

    implementation 'org.apache.commons:commons-lang3:3.18.0'
    implementation 'org.apache.commons:commons-collections4:4.5.0'
    implementation 'org.apache.commons:commons-compress:1.27.1'
    implementation 'commons-codec:commons-codec:1.18.0'
    implementation 'org.apache.poi:poi-ooxml:5.4.1'
    implementation 'org.apache.tika:tika-core:3.2.0'
    implementation 'org.apache.tika:tika-parsers-standard-package:3.2.0'

    implementation 'net.logstash.logback:logstash-logback-encoder:8.1'
    implementation 'com.fasterxml.uuid:java-uuid-generator:5.1.0'
    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.18.2'
    implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-smile:2.18.2'
    implementation 'com.opencsv:opencsv:5.11.2'
    implementation 'com.github.pjfanning:excel-streaming-reader:5.0.3'
    implementation 'com.nimbusds:nimbus-jose-jwt:10.3'
    implementation 'com.atlassian:onetime:2.1.2'

    implementation 'org.openjdk.jol:jol-core:0.17'

    compileOnly 'org.projectlombok:lombok'
    implementation 'org.mapstruct:mapstruct:1.6.3'
    annotationProcessor 'org.projectlombok:lombok'
    annotationProcessor 'org.mapstruct:mapstruct-processor:1.6.3'

    testImplementation 'io.projectreactor:reactor-test'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}
